# salon-manager

./: .gitignore  pyproject.toml
app/: __main__.py  commands.py  settings.py
app/src/dialogs/: states.py
app/src/dialogs/handlers/: admin.py  shifts.py  table_settings.py  user.py
app/src/dialogs/keyboards/: admin.py  cb_data.py  salon.py  shift.py  user.py
app/src/middleware/: db.py
app/src/services/: dates.py  exceptions.py  salons.py  scheduler.py  table_settings.py  user.py
app/src/services/db/: base.py  models.py
app/src/services/db/dao/: base_dao.py  dao.py  exceptions.py  holder.py  user_dao.py
app/src/services/gsheet/: creds.py  sheet.py  utils.py
app/src/services/shifts/: consts.py  shift_manager.py  shift_statistic.py
app/src/services/texts/: admin_texts.py  dates_text.py  salon_texts.py  shift_texts.py
migrations/versions/: 7e980526de5c_feat_added_default_gtable_settings.py  aaa25c8916ef_feat_create_tables.py
