[tool.poetry]
name = "aiogram3-template"
version = "0.1.0"
description = ""
authors = ["aldi <alkin.denis@gmail.com>"]
readme = "README.md"
packages = [{include = "aiogram3-template"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.31"
alembic = "^1.13.2"
aiogram = "^3.10.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
